made changes to game ui and added websockets

--- a/Frontend/app/src/main/res/layout/activity_play.xml
+++ b/Frontend/app/src/main/res/layout/activity_play.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,9 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent">
         <!-- Icons and timer go here -->
     </LinearLayout>
 
@@ -22,6 +21,7 @@
 
 
     <!-- Bottom area -->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/centralGridArea"
         android:layout_width="0dp"
@@ -35,107 +35,159 @@
         app:layout_constraintVertical_bias="0.0">
 
         <!--        action icon-->
-        <ImageView
-            android:id="@+id/gameBoard"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/imageview_selector"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.4"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.36"
-            app:layout_constraintWidth_percent="0.6" />
         <!--        green icons-->
 
         <!--        red icons-->
+
+
+        <ImageView
+            android:id="@+id/gameBoard"
+            android:layout_width="209dp"
+            android:layout_height="200dp"
+            android:src="@drawable/imageview_selector"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent=".3"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.426"
+            app:layout_constraintWidth_percent="0.6" />
 
         <ImageView
             android:id="@+id/greenIcon1"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:layout_marginEnd="16dp"
             android:src="@drawable/greeniconshape"
-            app:layout_constraintBottom_toBottomOf="@id/gameBoard"
-            app:layout_constraintEnd_toStartOf="@id/gameBoard"
-            app:layout_constraintTop_toTopOf="@id/gameBoard"
-            app:layout_constraintVertical_bias="0.256" />
+            app:layout_constraintStart_toStartOf="@+id/guideline2"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
 
         <ImageView
-            android:id="@+id/greenIcon2"
+            android:id="@+id/oval1"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/greeniconshape"
-            app:layout_constraintBottom_toBottomOf="@id/gameBoard"
-            app:layout_constraintEnd_toStartOf="@id/gameBoard"
-            app:layout_constraintTop_toTopOf="@id/gameBoard"
-            app:layout_constraintVertical_bias="0.748" />
-
-        <ImageView
-            android:id="@+id/redIcon1"
-            android:layout_width="45dp"
-            android:layout_height="88dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="72dp"
-            android:src="@drawable/rediconshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/redIcon2"
-            android:layout_width="45dp"
-            android:layout_height="88dp"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="72dp"
-            android:src="@drawable/rediconshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:src="@drawable/person"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/guideline2" />
 
 
         <ImageView
-            android:id="@+id/blueIcon1"
+            android:id="@+id/oval2"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/blueiconshape"
-            app:layout_constraintBottom_toBottomOf="@id/gameBoard"
-            app:layout_constraintStart_toEndOf="@id/gameBoard"
-            app:layout_constraintTop_toTopOf="@id/gameBoard"
-            app:layout_constraintVertical_bias="0.256" />
-
-        <ImageView
-            android:id="@+id/blueIcon2"
-            android:layout_width="45dp"
-            android:layout_height="88dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/blueiconshape"
-            app:layout_constraintBottom_toBottomOf="@id/gameBoard"
-            app:layout_constraintStart_toEndOf="@id/gameBoard"
-            app:layout_constraintTop_toTopOf="@id/gameBoard"
-            app:layout_constraintVertical_bias="0.748" />
+            android:src="@drawable/person"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guideline" />
 
         <ImageView
             android:id="@+id/yellowicon1"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="396dp"
             android:src="@drawable/yellowiconshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintStart_toStartOf="@+id/guideline7"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.85" />
 
         <ImageView
             android:id="@+id/yellowicon2"
             android:layout_width="45dp"
             android:layout_height="88dp"
-            android:layout_marginStart="120dp"
-            android:layout_marginTop="396dp"
             android:src="@drawable/yellowiconshape"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintStart_toStartOf="@+id/guideline7"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.15" />
+
+        <ImageView
+            android:id="@+id/blueIcon1"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/blueiconshape"
+            app:layout_constraintBottom_toTopOf="@+id/guideline5"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintTop_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.15"/>
+        <ImageView
+        android:id="@+id/blueIcon2"
+        android:layout_width="45dp"
+        android:layout_height="88dp"
+        android:src="@drawable/blueiconshape"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintVertical_bias="0.85"/>
+
+
+        <ImageView
+            android:id="@+id/greenIcon2"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/greeniconshape"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintTop_toTopOf="@+id/guideline5" />
+
+        <ImageView
+            android:id="@+id/redIcon1"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/rediconshape"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintHorizontal_bias=".9"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <ImageView
+            android:id="@+id/redIcon2"
+            android:layout_width="45dp"
+            android:layout_height="88dp"
+            android:src="@drawable/rediconshape"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toStartOf="@+id/guideline2" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.67" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.33" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.21" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent=".67" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.96" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".04" />
 
 
         <!-- ... additional ImageView elements for red, blue, yellow, green icons -->
@@ -148,8 +200,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
         <!-- Bottom elements go here -->
     </LinearLayout>
 
