--- a/Frontend/app/src/main/res/layout/activity_signup.xml
+++ b/Frontend/app/src/main/res/layout/activity_signup.xml
@@ -66,7 +66,7 @@
             android:textSize="20dp"></TextView>
 
         <EditText
-            android:id="@+id/signup_email_edt"
+            android:id="@+id/signup_password_edt"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:gravity="center"
