--- a/Frontend/app/src/main/res/layout/activity_friends.xml
+++ b/Frontend/app/src/main/res/layout/activity_friends.xml
@@ -48,7 +48,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/friends_list"
+        android:id="@+id/messages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="20dp"
