--- a/Frontend/app/src/main/res/layout/activity_menu.xml
+++ b/Frontend/app/src/main/res/layout/activity_menu.xml
@@ -8,81 +8,100 @@
     android:orientation="vertical"
     android:paddingTop="16dp">
 
-    <Button
-        android:id="@+id/play_btn"
-        android:layout_width="match_parent"
+    <ImageButton
+        android:id="@+id/msg_btn"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#2196F3"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:text="Play Game"
-        tools:ignore="HardcodedText" />
+        android:layout_gravity="top|left"
+        android:src="@android:drawable/sym_action_chat"
+        tools:srcCompat="@android:drawable/sym_action_chat" />
 
-    <Button
-        android:id="@+id/rules_btn"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#2196F3"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:text="Rules"
-        tools:ignore="HardcodedText" />
+        android:layout_height="match_parent"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:layout_marginTop="100dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/stats_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#2196F3"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:text="Stats"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/play_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#2196F3"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:text="Play Game"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/friends_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#2196F3"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:text="Friends"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/rules_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#2196F3"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:text="Rules"
+            tools:ignore="HardcodedText" />
 
-    <Button
-        android:id="@+id/settings_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="#2196F3"
-        android:gravity="center"
-        android:paddingLeft="24dp"
-        android:text="Settings"
-        tools:ignore="HardcodedText" />
+        <Button
+            android:id="@+id/stats_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#2196F3"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:text="Stats"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/friends_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#2196F3"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:text="Friends"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/settings_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="#2196F3"
+            android:gravity="center"
+            android:paddingLeft="24dp"
+            android:text="Settings"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/back_button"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:gravity="center"
+            android:onClick="onBackPressed"
+            android:text="Back"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+
+    </LinearLayout>
 
     <!-- Back Button - Relocated to be consistent with other buttons -->
-    <Button
-        android:id="@+id/back_button"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:onClick="onBackPressed"
-        android:text="Back"
-        android:textSize="16sp"
-        tools:ignore="HardcodedText" />
 
 </LinearLayout>
