--- a/Frontend/app/src/main/res/layout/activity_afterjoinlobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_afterjoinlobby.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <ScrollView
+    <!-- Label for the EditText -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Please enter a lobby id:"
+        android:layout_marginBottom="8dp"/>
+
+    <!-- EditText for number input -->
+    <EditText
+        android:id="@+id/lobby_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp">
+        android:hint="Enter number"
+        android:inputType="number"
+        android:maxLines="1"/>
 
-        <TextView
-            android:id="@+id/tx1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="The players will appear here:\n"
-            android:textSize="20dp" />
-
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/join_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Join" />
+</LinearLayout>
